fix: z-index bottom nav

--- a/css/bottom-navigation.css
+++ b/css/bottom-navigation.css
@@ -4,6 +4,7 @@
     bottom: 0;
     left: 0;
     background-color: var(--color-off-white);
+    z-index: 100;
 }
 
 .bottom-navigation::before {
